# pylock-attestations

./: CHANGELOG.md  Makefile  README.md  pyproject.toml  vendor.txt
.github/: dependabot.yml
.github/workflows/: docs.yml  lint.yml  release.yml  tests.yml  zizmor.yml
src/pylock_attestations/: __init__.py  __main__.py  _cli.py
src/pylock_attestations/_vendor/packaging/: specifiers.py  version.py
src/pylock_attestations/_vendor/packaging/licenses/: __init__.py
test/: pylock.example.toml  test_init.py
