[project]
name = "pylock-attestations"
dynamic = ["version"]
description = "CLI tool to add attestation identities to a pylock.toml file"
readme = "README.md"
license-files = ["LICENSE"]
license = "Apache-2.0"

authors = [
    { name = "Trail of Bits", email = "opensource@trailofbits.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "pypi-attestations==0.0.26",
    "tomli-w>=1.2.0",
]
requires-python = ">=3.13"

[tool.setuptools.dynamic]
version = { attr = "pylock_attestations.__version__" }

[project.optional-dependencies]
doc = ["pdoc"]
test = ["pytest", "pytest-cov", "pretend", "coverage[toml]"]
lint = [
    # NOTE: ruff is under active development, so we pin conservatively here
    # and let Dependabot periodically perform this update.
    "ruff ~= 0.11.8",
    "mypy >= 1.0",
    "types-html5lib",
    "types-requests",
    "types-toml",
    "interrogate",
]
dev = ["pylock-attestations[doc,test,lint]", "twine", "build"]

[project.scripts]
"pylock-attestations" = "pylock_attestations._cli:main"

[project.urls]
Homepage = "https://pypi.org/project/pylock-attestations"
Documentation = "https://trailofbits.github.io/pylock-attestations/"
Issues = "https://github.com/trailofbits/pylock-attestations/issues"
Source = "https://github.com/trailofbits/pylock-attestations"

[tool.coverage.run]
# don't attempt code coverage for the CLI entrypoints
omit = ["src/pylock_attestations/_cli.py"]

[tool.mypy]
mypy_path = "src"
packages = "pylock_attestations"
allow_redefinition = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
sqlite_cache = true
strict_equality = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.ruff]
line-length = 100
include = ["src/**/*.py", "test/**/*.py"]
# TODO: remove once we stop vendoring `packaging`
exclude = ["src/pylock_attestations/_vendor/"]

[tool.ruff.lint]
select = ["ALL"]
# D203 and D213 are incompatible with D211 and D212 respectively.
# COM812 and ISC001 can cause conflicts when using ruff as a formatter.
# See https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules.
ignore = ["D203", "D213", "COM812", "ISC001"]

[tool.ruff.lint.per-file-ignores]
"src/pylock_attestations/_cli.py" = [
    "T201", # allow `print` in cli module
]
"test/**/*.py" = [
    "D",    # no docstrings in tests
    "S101", # asserts are expected in tests
]
[tool.interrogate]
# don't enforce documentation coverage for packaging, testing, the virtual
# environment, or the CLI (which is documented separately).
exclude = ["env", "test", "src/pylock_attestations/_cli.py", "src/pylock_attestations/_vendor"]
ignore-semiprivate = true
fail-under = 100

[tool.uv]
prerelease = "allow"

# TODO: remove once we stop vendoring `packaging`

[[tool.mypy.overrides]]
module = "pylock_attestations._vendor.*"
ignore_errors = true

[tool.vendoring]
destination = "src/pylock_attestations/_vendor/"
requirements = "vendor.txt"
namespace = "pylock_attestations._vendor"

[tool.vendoring.transformations]
drop = [
    "*.dist-info",
    "*.egg-info",
]
